Bug 163228 - Show vertical text direction options for Mongolian script
Summary: Show vertical text direction options for Mongolian script
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: China-Minority-Scripts
  Show dependency treegraph
 
Reported: 2024-10-01 02:59 UTC by Jonathan Clark
Modified: 2025-02-10 16:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Clark 2024-10-01 02:59:35 UTC
Description:
Mongolian script is typically written in a left-to-right (vertical) text direction.

Currently, vertical text direction options are only shown for "Asian" languages. These options should also be shown for Mongolian script, which in our language trichotomy is considered CTL.

Steps to Reproduce:
1. Enable CTL support.
2. Type some Mongolian script, and set the paragraph language to Mongolian Mongolian (CTL).
3. Try to change the page text direction to Left-to-right (vertical).

Actual Results:
The text direction drop-down is present, but does not include vertical options.

Expected Results:
Mongolian script users should be able to choose left-to-right (vertical) text direction.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eb73e2c8b66ef3539e68ee8150e119bbe437955c
CPU threads: 32; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Volga 2024-10-05 11:31:14 UTC
This direction is also possibly useful for Sutton SignWriting.
Comment 2 Commit Notification 2025-01-22 21:18:28 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1412f0235405e71aaa327596e3db71ffa999e122

tdf#163228 Enable vertical text options for Mongolian script

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Jonathan Clark 2025-01-22 21:34:03 UTC
I limited this fix to Mongolian, in large part due to the fact that the current design/implementation is based on script groups and locale.

(In reply to Volga from comment #1)
> This direction is also possibly useful for Sutton SignWriting.

Would it be worth filing a bug to reconsider whether/how we hide the text direction UI options? There's a workaround (enable CJK support), but it seems unfortunate to require.
Comment 4 Buovjaga 2025-02-09 14:30:30 UTC
(In reply to Jonathan Clark from comment #3)
> I limited this fix to Mongolian, in large part due to the fact that the
> current design/implementation is based on script groups and locale.
> 
> (In reply to Volga from comment #1)
> > This direction is also possibly useful for Sutton SignWriting.
> 
> Would it be worth filing a bug to reconsider whether/how we hide the text
> direction UI options? There's a workaround (enable CJK support), but it
> seems unfortunate to require.

Adding Volga to Cc.
Comment 5 Volga 2025-02-10 16:42:19 UTC
(In reply to Jonathan Clark from comment #3)
> Would it be worth filing a bug to reconsider whether/how we hide the text
> direction UI options? There's a workaround (enable CJK support), but it
> seems unfortunate to require.

I don't think it's meaningful to fill such bugs, instead, I think options for text direction should be unrelated to specific script, and they should works anywhere, i.e. where you input texts, where you can set text direction.

Some information about the Sutton SignWriting are available here, you will found some SignWriting books uses this text direction:
https://signwriting.org/
I've acknowledged that for a long time when I discovered that on Wikipedia.

BTW I also found something interesting. In some images scanned from Manchu Veritable Records (滿洲實錄), both Manchu and Chinese texts used LR-TB text direction.
https://commons.wikimedia.org/wiki/Category:%E6%BB%BF%E6%B4%B2%E5%AF%A6%E9%8C%84/%E5%8D%B7%E4%B8%80