tdf#163228 Enable vertical text options for Mongolian script

Previously, vertical text direction options were enabled if and only if
CJK language support is enabled. This change extends the logic to also
enable vertical text direction options if the CTL language is set to
Mongolian Mongolian.

Change-Id: I4e3738b4dea755c26c786cc233aff8786146e90b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180604
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>